New UnitTest JpaH2Test#AuthorAndBookWithDetailsType()