@@ -7,8 +7,12 @@ import jakarta.persistence.Persistence;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import study.hibernate.model.Author;
+import study.hibernate.model.Book;
+import study.hibernate.model.Details;
 import study.hibernate.model.Message;
 
+import java.math.BigDecimal;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -37,16 +41,38 @@ class JpaH2Test {
         Message message = new Message();
         message.setText("Działa!");
         em.persist(message);
-        et.commit();
 
-        et.begin();
         List<Message> messages = em.createQuery("select m from Message m").getResultList();
-        assertEquals(messages.get(0).getText(), "Działa!");
+        assertEquals("Działa!", messages.getFirst().getText());
 
-        messages.get(0).setText("Nowy text.");
+        messages.getFirst().setText("Nowy text.");
         et.commit();// Aktualizacja zmienionej wartości.
 
         List<Message> newMessages = em.createQuery("select m from Message m").getResultList();
-        assertEquals(newMessages.get(0).getText(), "Nowy text.");
+        assertEquals("Nowy text.", newMessages.getFirst().getText());
+    }
+
+    @Test
+    void AuthorAndBookWithDetailsType() {
+        et.begin();
+
+        Author author = new Author();
+
+        author.setName("Jan Kowalski");
+        em.persist(author);
+
+        Book book = new Book("W pustyni i w paszczy.", author);
+
+        Details details = new Details();
+        details.setDescription("Słaba!");
+        details.setPrice(BigDecimal.valueOf(1111.11));
+        book.setDetails(details);
+
+        author.getBooks().add(book);
+        // Tablica BOOKS aktualizuje się kaskadowo bez użycia dodatkowych persist()
+        et.commit();
+
+        Author reult = em.createQuery("select a from Author a",Author.class).getResultList().getFirst();
+        assertEquals("Słaba!", reult.getBooks().stream().findFirst().get().getDetails().getDescription());
     }
 }
